Bascule des tables NIFI_LOGS, ZSMART et de la table ft_amn_local_traffic_day2

--- a/PROD/CONF/collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/collect-zsmart-cron-tasks.conf
@@ -22,258 +22,258 @@ cronmanagerId = "007"
 
 //COLLECTE ZSMART
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ACCOUNT",
-    cron = "30 0 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-account.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ACCOUNT",
+//    cron = "30 0 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-account.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_BILL",
-    cron = "30 5 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-bill.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_BILL",
+//    cron = "30 5 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-bill.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_BILLCYCLE",
-    cron = "30 10 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-billcycle.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_BILLCYCLE",
+//    cron = "30 10 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-billcycle.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CA_TRANSACTION",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-ca-transaction.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CA_TRANSACTION",
+//    cron = "30 15 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-ca-transaction.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CHANSIM",
-    cron = "30 20 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-chansim.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CHANSIM",
+//    cron = "30 20 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-chansim.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CHANTEL",
-    cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-chantel.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CHANTEL",
+//    cron = "30 25 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-chantel.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CONSERV",
-    cron = "30 30 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-conserv.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CONSERV",
+//    cron = "30 30 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-conserv.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CONT",
-    cron = "30 35 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-cont.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CONT",
+//    cron = "30 35 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-cont.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CUST_FULL",
-    cron = "30 40 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-cust-full.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CUST_FULL",
+//    cron = "30 40 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-cust-full.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CUSTGROUP",
-    cron = "30 45 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-custgroup.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CUSTGROUP",
+//    cron = "30 45 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-custgroup.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DEPOCREDI",
-    cron = "30 50 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-depocredi.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_DEPOCREDI",
+//    cron = "30 50 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-depocredi.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_GESFLOT",
-    cron = "30 59 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-gesflot.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_GESFLOT",
+//    cron = "30 59 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-gesflot.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_PAY",
-    cron = "30 5 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-pay.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_PAY",
+//    cron = "30 5 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-pay.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_RATECHAN",
-    cron = "30 10 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-ratechan.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_RATECHAN",
+//    cron = "30 10 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-ratechan.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_RATEPLAN",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-rateplan.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_RATEPLAN",
+//    cron = "30 15 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-rateplan.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SERVICE",
-    cron = "30 20 */1 * * ?",
-    configFile = "/PROD/CONF/ZSMART/load-it-service.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_SERVICE",
+//    cron = "30 20 */1 * * ?",
+//    configFile = "/PROD/CONF/ZSMART/load-it-service.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 /////////////////////////////////ORANGE MONEY ////////////////////////
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OMNY_SERVICES_CHARGES_DETAILS",
-    cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/OM/load_it_omny_services_charges_details.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OMNY_SERVICES_CHARGES_DETAILS",
+//    cron = "30 25 */1 * * ?",
+//    configFile = "/PROD/CONF/OM/load_it_omny_services_charges_details.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 ////////////////////////////OTHER FT///////////////////////////////////
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_AMN_LOCAL_TRAFFIC_DAY",
-    cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-amn-local-traffic-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_AMN_LOCAL_TRAFFIC_DAY",
+//    cron = "30 25 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-amn-local-traffic-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
