--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -636,19 +636,19 @@ crontasks +=
 
 
 // Chargement des logs Nifi
-crontasks +=
-  {
-    instanceId = "LOAD_NIFI_LOGS",
-    cron = "0 5-59/15 * * * ?",
-    configFile = "/PROD/CONF/NIFI_LOGS/load-it-log.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "20 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_NIFI_LOGS",
+//    cron = "0 5-59/15 * * * ?",
+//    configFile = "/PROD/CONF/NIFI_LOGS/load-it-log.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "20 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //--###**************************************#####---
 //--###        CHARGEMENT MVAS
@@ -780,16 +780,16 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_NIFI_LOGS_SPOOLS",
-    cron = "0 42 */1 * * ?",
-    configFile = "/PROD/CONF/NIFI_LOGS/load-it-logs-spools.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_NIFI_LOGS_SPOOLS",
+//    cron = "0 42 */1 * * ?",
+//    configFile = "/PROD/CONF/NIFI_LOGS/load-it-logs-spools.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
