--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
@@ -1,6 +1,16 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode", "value": "nonstrict"}
+
 flux.name = "LOAD_SPARK_FT_AMN_LOCAL_TRAFFIC_DAY"
 
 flux.has-date-processing = true
@@ -15,26 +25,19 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
-
-flux.exec-query.execution.mode = "JDBC"
+flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/prequery_spark_ft_amn_local_traffic_day.hql"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/compute_and_insert_into_spark_ft_amn_local_traffic_day.hql"
-
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-// Prequery variables
 
 
 
