--- a/PROD/CONF/NIFI_LOGS/load-spark-it-log.conf
+++ b/PROD/CONF/NIFI_LOGS/load-spark-it-log.conf
@@ -1,6 +1,16 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode", "value": "nonstrict"}
+
 flux.name = "LOAD_SPARK_NIFI_LOGS"
 
 flux.has-date-processing = false
@@ -20,8 +30,11 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/NIFI_LOGS/insert_into_spark_it_logs.hql"
+flux.exec-query.execution.mode = "JDBC"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+
+flux.exec-queries += "/PROD/SCRIPTS/IT/NIFI_LOGS/insert_into_spark_it_logs.hql"
