--- a/PROD/CONF/ZSMART/load-spark-it-ca-transaction.conf
+++ b/PROD/CONF/ZSMART/load-spark-it-ca-transaction.conf
@@ -1,6 +1,16 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+
 flux.name = "LOAD_SPARK_IT_CA_TRANSACTION"
 
 flux.has-date-processing = false
@@ -18,10 +28,13 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
+
 flux.exec-query.execution.mode = "JDBC"
+
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+
 flux.exec-queries += "/PROD/SCRIPTS/IT/ZSMART/insert_into_spark_it_ca_transaction.hql"
 //flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
