--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -1012,19 +1012,19 @@ crontasks +=
     }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_VAS_REVENUE_DAILY",
-    cron = "0 58 */1 * * ?",
-    configFile = "/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_VAS_REVENUE_DAILY",
+//    cron = "0 58 */1 * * ?",
+//    configFile = "/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 crontasks +=
