Bascule des tables d'idenfication

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -620,7 +620,7 @@ cronmanagerId = "001"
 //  }
 
 // Chargement de IT_OMNY_ACCOUNT_SNAPSHOT pour la source SUBSCRIBER EXTRACT
-crontasks +=
+//crontasks +=
 //  {
 //    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_SUBSCRIBER",
 //    cron = "35 10-49/30 * * * ?",
@@ -738,7 +738,7 @@ crontasks +=
 
 // Chargement BASE IDENTIFICATION
 
-crontasks +=
+//crontasks +=
 //  {
 //    instanceId = "LOAD_IT_CLIENT_SNAPID_DIRECTORY",
 //    cron = "0 40 */1 * * ?",
@@ -752,33 +752,33 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_NOMAD_CLIENT_DIRECTORY",
-    cron = "0 40 */1 * * ?",
-    configFile = "/PROD/CONF/IDENTIFICATION/load-it-nomad-client-directory.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//; crontasks +=
+//;   {
+//;     instanceId = "LOAD_IT_NOMAD_CLIENT_DIRECTORY",
+//;     cron = "0 40 */1 * * ?",
+//;     configFile = "/PROD/CONF/IDENTIFICATION/load-it-nomad-client-directory.conf",
+//;     taskType = "HIVE"
+//;     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//;     timeout = "100 minutes"
+//;     extraTaskParams : [
+//;       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//;       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//;     ]
+//;   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_PREPAID_CLIENT_DIRECTORY",
-    cron = "0 40 */1 * * ?",
-    configFile = "/PROD/CONF/IDENTIFICATION/load-it-prepaid-client-directory.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//; crontasks +=
+//;   {
+//;     instanceId = "LOAD_IT_PREPAID_CLIENT_DIRECTORY",
+//;     cron = "0 40 */1 * * ?",
+//;     configFile = "/PROD/CONF/IDENTIFICATION/load-it-prepaid-client-directory.conf",
+//;     taskType = "HIVE"
+//;     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//;     timeout = "100 minutes"
+//;     extraTaskParams : [
+//;       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//;       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//;     ]
+//;   }
 
 //crontasks +=
 //  {
