Bascule des KPIs Global Activity et Revenue Summary

--- a/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
+++ b/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
@@ -8,7 +8,7 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "spark.sql.session.timeZone", "value": "WAT"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "5"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FTA"}
-flux.spark.setup-var +=  {"key": "table_name","value": "FT_A_APPELS_CTI_COUNT"}
+flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_A_APPELS_CTI_COUNT"}
 
 flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
 
