--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-a-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-a-edr-prpd-eqt.conf
@@ -15,7 +15,7 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 flux.spark.setup-var +=  {"key": "partition_name","value": "EVENT_DAY"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "20"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FTA"}
-flux.spark.setup-var +=  {"key": "table_name","value": SPARK_FT_A_EDR_PRPD_EQT}
+flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_A_EDR_PRPD_EQT"}
 flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
 flux.spark.setup-var +=  {"key": "database_table_name","value": "AGG.SPARK_FT_A_EDR_PRPD_EQT"}
 flux.spark.setup-var +=  {"key": "table_partition","value": "EVENT_DAY"}
