--- a/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
@@ -9,7 +9,7 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
 flux.spark.setup-var +=  {"key": "date_offset","value": "90"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
-flux.spark.setup-var +=  {"key": "table_name","value": "FT_MSC_TRANSACTION"}
+flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_MSC_TRANSACTION"}
 flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_MSC_TRANSACTION"}
 flux.spark.setup-var +=  {"key": "table_partition","value": "TRANSACTION_DATE"}
 flux.name = "LOAD_SPARK_FT_MSC_TRANSACTION"
