--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -130,19 +130,19 @@ cronmanagerId = "002"
 //  }
 
 // Chargement FT IN ZTE OVERDRAFT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_OVERDRAFT",
-    cron = "0 7 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_OVERDRAFT",
+//    cron = "0 7 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 ////--###**************************************#####---
@@ -229,19 +229,19 @@ crontasks +=
   }
 
 // Chargement KPI_ADJUSTMENT
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_ADJUSTMENT",
-    cron = "0 13 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_ADJUSTMENT",
+//    cron = "0 13 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement FT_A IN ZTE GPRS ACTIVITY POST
@@ -309,35 +309,35 @@ crontasks +=
 
 
 // Chargement LOAD_FT_GSM_TRAFFIC_REVENUE_DAILY
-crontasks +=
-  {
-    instanceId = "LOAD_FT_GSM_TRAFFIC_REVENUE_DAILY",
-    cron = "0 17/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-gsm-traffic-revenue-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_GSM_TRAFFIC_REVENUE_DAILY",
+//    cron = "0 17/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-gsm-traffic-revenue-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement FT_A IN ZTE GPRS ACTIVITY
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
-    cron = "0 18/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
+//    cron = "0 18/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -724,34 +724,34 @@ crontasks +=
 ////--###        CHARGEMENT FT ZEBRA
 ////--###**************************************#####---
 // Chargement de ZEBRA FT REFILL
-crontasks +=
-  {
-    instanceId = "LOAD_FT_REFILL",
-    cron = "0 40 */1 * * ?",
-    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-refill.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_REFILL",
+//    cron = "0 40 */1 * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-refill.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de ZEBRA FT SUBS RETAIL
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SUBS_RETAIL_ZEBRA",
-    cron = "0 41 */1 * * ?",
-    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SUBS_RETAIL_ZEBRA",
+//    cron = "0 41 */1 * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // COMPUTE STATISTICS
 crontasks +=
