--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1109,3 +1109,163 @@ crontasks +=
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
+
+// Chargement FT_A IN ZTE GPRS ACTIVITY
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_A_GPRS_ACTIVITY",
+    cron = "0 18/20 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "30 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_A_GPRS_ACTIVITY_POST",
+    cron = "0 14 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity-post.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "50 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_FT_GSM_TRAFFIC_REVENUE_DAILY
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_GSM_TRAFFIC_REVENUE_DAILY",
+    cron = "0 17/20 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-traffic-revenue-daily.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "30 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement FT IN ZTE OVERDRAFT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_OVERDRAFT",
+    cron = "0 7 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-overdraft.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "65 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement de ZEBRA FT REFILL
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_REFILL",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "30 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement de ZEBRA FT SUBS RETAIL
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_SUBS_RETAIL_ZEBRA",
+    cron = "0 41 */1 * * ?",
+    configFile = "/PROD/CONF/ZEBRA/FT/load-spark-ft-subs-retail-zebra.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "30 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement KPI_ADJUSTMENT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_KPI_ADJUSTMENT",
+    cron = "0 13 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "65 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
