Bascule des KPIs Global Activity et Revenue Summary

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -453,35 +453,35 @@ crontasks +=
 
 
 // LOAD_KPI_FT_A_DATA_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_A_DATA_TRANSFER",
-    cron = "0 26/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-data-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_A_DATA_TRANSFER",
+//    cron = "0 26/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-data-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // LOAD_KPI_FT_CREDIT_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_CREDIT_TRANSFER",
-    cron = "0 27/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-credit-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_CREDIT_TRANSFER",
+//    cron = "0 27/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-credit-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -856,19 +856,19 @@ crontasks +=
 
 
 // LOAD_KPI_FT_CONTRACT_SNAPSHOT
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_CONTRACT_SNAPSHOT",
-    cron = "0 48/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-contract-snapshot.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_CONTRACT_SNAPSHOT",
+//    cron = "0 48/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-contract-snapshot.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //// CALCUL DU SMS PARC
