--- a/PROD/CONF/collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/collect-zsmart-cron-tasks.conf
@@ -264,16 +264,16 @@ cronmanagerId = "007"
 
 ////////////////////////////OTHER FT///////////////////////////////////
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_AMN_LOCAL_TRAFFIC_DAY",
-//    cron = "30 25 */1 * * ?",
-//    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-amn-local-traffic-day.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "40 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_AMN_LOCAL_TRAFFIC_DAY",
+    cron = "30 25 */1 * * ?",
+    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-amn-local-traffic-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
