Bascule des KPIs Global Activity et Revenue Summary

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -390,66 +390,66 @@ crontasks +=
 
 
 // LOAD_KPI_FT_GSM_TRAFFIC_REVENUE_DAILY
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_GSM_TRAFFIC_REVENUE_DAILY",
-    cron = "0 22/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-gsm-traffic-revenue-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_GSM_TRAFFIC_REVENUE_DAILY",
+//    cron = "0 22/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-gsm-traffic-revenue-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // LOAD_KPI_FT_A_GPRS_ACTIVITY
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_A_GPRS_ACTIVITY",
-    cron = "0 23/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-gprs-activity.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_A_GPRS_ACTIVITY",
+//    cron = "0 23/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-gprs-activity.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // LOAD_KPI_FT_EMERGENCY_DATA
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_EMERGENCY_DATA",
-    cron = "0 24/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-emergency-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_EMERGENCY_DATA",
+//    cron = "0 24/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-emergency-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // LOAD_KPI_FT_A_SUBSCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_A_SUBSCRIPTION",
-    cron = "0 25/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_A_SUBSCRIPTION",
+//    cron = "0 25/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // LOAD_KPI_FT_A_DATA_TRANSFER
@@ -486,19 +486,19 @@ crontasks +=
 
 
 // LOAD_KPI_FT_OVERDRAFT
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_FT_OVERDRAFT",
-    cron = "0 28/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-overdraft.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_FT_OVERDRAFT",
+//    cron = "0 28/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-overdraft.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
