Bascule des tables du delta (début)

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -127,19 +127,19 @@ cronmanagerId = "008"
 
 
 
-crontasks +=
-  {
-    instanceId = "COMPUTE_GLOBAL_ACTIVITY_DAILY_STATUS",
-    cron = "0 14 */1 * * ?",
-    configFile = "/PROD/CONF/MONITORING/compute_global_activity_daily_status.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_GLOBAL_ACTIVITY_DAILY_STATUS",
+//    cron = "0 14 */1 * * ?",
+//    configFile = "/PROD/CONF/MONITORING/compute_global_activity_daily_status.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //crontasks +=
